[project]
name = "specview"
version = "0.1.0"
description = "A Hyperspectral Image Viewer for Python"
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyqt6 (>=6.10.0,<7.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
