[project]
name = "cubeview"
version = "0.1.0"
description = "A Hyperspectral Image Viewer for Python"
authors = [
    {name = "Z.M. Vig",email = "zvig@umd.edu"}
]
license = "LICENSE"
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "pyqt6 (>=6.10.0,<7.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "alphashape (>=1.3.1,<2.0.0)",
    "types-shapely (>=2.1.0.20250917,<3.0.0.0)",
    "spectralio (>=0.1.4,<0.2.0)",
    "arguably (>=1.3.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "pandas-stubs (>=2.3.3.251201,<3.0.0.0)"
]

[project.scripts]
cubeview = "cubeview.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
